--- a/src/app/info/info.component.less
+++ b/src/app/info/info.component.less
@@ -48,8 +48,10 @@ a.link {
     color: #265301;
   }
 
-  &:hover {
-    box-shadow: 0 0 15px 5px #3053ff;
+  @media (hover:hover) {
+    &:hover {
+      box-shadow: 0 0 15px 5px #3053ff;
+    }
   }
 }
 
@@ -86,9 +88,11 @@ a.link {
   margin-left: 2px;
   margin-right: 2px;
 
-  &:hover {
-    opacity: 0.6;
-    box-shadow: 0 0 15px 5px #3053ff;
+  @media (hover:hover) {
+    &:hover {
+      opacity: 0.6;
+      box-shadow: 0 0 15px 5px #3053ff;
+    }
   }
 }
 
